fixed styling and image not loading

--- a/src/Components/Info.css
+++ b/src/Components/Info.css
@@ -1,6 +1,10 @@
 .info{
-    height: 80px;
-    width: 100%;
+    max-width:100%;
     background-color: RGB(27, 38, 49, .5);
     color:#ECF0F1;
+    padding: 20px;
+}
+
+p{
+	padding: 20px;
 }
