--- a/src/Components/Header.css
+++ b/src/Components/Header.css
@@ -1,6 +1,6 @@
 .header{
-    height: 80px;
-    width: 100%;
+    padding: 20px;;
+    max-width:100%;
     color:#ECF0F1;
     background-color: RGB(27, 38, 49, .5);
     margin-bottom: 20px;
